--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -9,8 +9,21 @@ on:
 
 
 jobs:
-  build:
 
+  create-folder:
+      name: create-folder
+      runs-on: ubuntu-latest
+      steps:
+        - name: executing remote ssh commands using password
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USERNAME }}
+            password: ${{ secrets.PASSWORD }}
+            port: ${{ secrets.PORT }}
+            script: whoami
+
+  build:
     runs-on: ubuntu-latest
 
     steps:
